force-app/main/default/objects/Retailer_Reimbursement_Scheme__c/Retailer_Reimbursement_Scheme__c.object-meta.xml
<CustomObject>
    <label>Retailer Reimbursement Scheme</label>
    <nameField>
        <displayFormat>RRS-{0000}</displayFormat>
        <label>Allocation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retailer Reimbursement Schemes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>