force-app/main/default/objects/Retailer_Reimbursement_Scheme__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Retailer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Retailer Reimbursement Schemes</relationshipLabel>
    <relationshipName>Retailer_Reimbursement_Schemes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>