force-app/main/default/objects/Retailer_Reimbursement_Scheme__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <label>Balance</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>