force-app/main/default/objects/Retailer_Reimbursement_Scheme__c/fields/Distribution_Name__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Name__c</fullName>
    <formula>Account__r.Distributor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distribution Name</label>
    <type>Text</type>
</CustomField>