force-app/main/default/objects/Retailer_Reimbursement_Scheme__c/fields/Hub__c.field-meta.xml
<CustomField>
    <fullName>Hub__c</fullName>
    <formula>TEXT( Account__r.Distributor__r.Hub__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hub</label>
    <type>Text</type>
</CustomField>