force-app/main/default/objects/Retailer_Reimbursement_Scheme__c/fields/Initial_Balance__c.field-meta.xml
<CustomField>
    <fullName>Initial_Balance__c</fullName>
    <description>Set automatically at creation, equal to whatever Balance__c was first entered. Never changes afterward, regardless of how Balance__c later depletes — this is the historical record of what was originally assigned, used for reporting.</description>
    <label>Initial Balance</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>