force-app/main/default/objects/Retailer_Reimbursement_Scheme__c/fields/Scheme_Definition__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Definition__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Scheme Definition</label>
    <referenceTo>Reimbursement_Scheme_Definition__c</referenceTo>
    <relationshipLabel>Retailer Reimbursement Schemes</relationshipLabel>
    <relationshipName>Retailer_Reimbursement_Schemes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>