force-app/main/default/objects/Retailer_Reimbursement_Scheme__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Distribution_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Balance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>